[WK2][!NETWORK_SESSION] Failure to download when using a download attribute with no value on an anchor https://bugs.webkit.org/show_bug.cgi?id=169060 <rdar://problem/30773140>

Reviewed by Darin Adler.

Source/WebCore:

Make sure we never set the suggested filename to the empty string when
the download attribute is present but has no value.

Test: http/tests/download/anchor-download-no-value.html

* loader/PolicyChecker.cpp:
(WebCore::PolicyChecker::checkNavigationPolicy):

Source/WebKit2:

In the !NETWORK_SESSION code path, we were failing to use the suggested filename coming from the
network layer in the case where the download attribute is present but has no value. We were ending
up passing an empty string as suggested filename to Safari which is not handled properly.

* UIProcess/Downloads/DownloadProxy.cpp:
(WebKit::DownloadProxy::decideDestinationWithSuggestedFilename):

LayoutTests:

Add layout test coverage.

* http/tests/download/anchor-download-no-value-expected.txt: Added.
* http/tests/download/anchor-download-no-value.html: Added.

Canonical link: https://commits.webkit.org/186048@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@213253 268f45cc-cd09-0410-ab3c-d52691b4dbfc